✨ Update settings and enhance Deeplearning notes with LangChain updates and July 2025 logs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "workbench.colorTheme": "Monokai"
+    "workbench.colorTheme": "Minimal Kiwi",
+    "workbench.iconTheme": "fira-code-material-minimal",
+    "editor.fontFamily": "fira-code-nerd, FiraCode Nerd Font, Consolas, 'Courier New', monospace",
+    "editor.fontLigatures": true
 }
